# aetherion-trading-service

./: .dockerignore  .env.example  .gitignore  DEVELOPER.md  Dockerfile.aetherion  Dockerfile.envoy  Dockerfile.frontend  Dockerfile.orchestrator  Dockerfile.risk  Dockerfile.trading  Makefile  Makefile.mk  README.md  STRATEGIES.md  aetherion_engine.html  deprecated_features.yaml  docker-compose.override.yml  docker-compose.yml  envoy.yaml  envoydev.yaml  go.mod  go.work.sum  nginx.conf  package-lock.json  runtime_override_docker.sh  trading_api.proto
.gemini/: settings.json
certs/: .gitkeep
cpp/: cpp_lib.cpp  test_load  test_load.cpp
data/: BTCUSD_1min.csv
docs/: API.md  DEPLOYMENT.md  SECURITY.md  USER_GUIDE.md
frontend/: .env.example  README.md  package-lock.json  package.json
go/: auth.go  auth_test.go  bot_service.go  bot_service_test.go  config.go  cors.go  db.go  db_integration_test.go  execute_trade_test.go  go.mod  go.sum  go_lib.go  jwt_expiry_test.go  libgo.dylib  libgo.h  main.go  main_integration_test.go  main_test.go  marketdata.go  models.go  momentum_test.go  order_service.go  orderbook.go  orderbook_ffi.go  orderbook_test.go  strategy_guard_test.go  subscription.go  trading_service_test.go
protos/: bot.proto  trading_api.proto
python/: Dockerfile  app.py  backtest_api.py  backtest_engine.py  fetch_binance.py  main.py  orchestrator.py  (+4 more)
rust/risk_service/: Cargo.toml  build.rs
rust/risk_service/protos/: trading_api.proto
rust/risk_service/src/: lib.rs  main.rs  risk_calculator.rs
rust/risk_service/tests/: test_risk_calculator.rs
(+70 files in other folders)
