[package]
name = "risk_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
rand_distr = "0.4"
nalgebra = "0.32"
chrono = "0.4"

[build-dependencies]
tonic-build = "0.11"